WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95103
GCC warning in JSActivation is causing Mac EWS errors
https://bugs.webkit.org/show_bug.cgi?id=95103
Summary
GCC warning in JSActivation is causing Mac EWS errors
Jon Lee
Reported
2012-08-27 10:56:15 PDT
None of the patches going through Mac EWS are succeeding because of a warning that GCC is treating as an error: CompileC /Volumes/Data/WebKit/WebKitBuild/JavaScriptCore.build/Release/JavaScriptCore.build/Objects-normal/x86_64/JSActivation.o runtime/JSActivation.cpp normal x86_64 c++ com.apple.compilers.gcc.4_2 cd /Volumes/Data/WebKit/Source/JavaScriptCore setenv LANG en_US.US-ASCII /Developer/usr/bin/gcc-4.2 -x c++ -arch x86_64 -fmessage-length=0 -pipe -Wno-trigraphs -fno-exceptions -fno-rtti -fpascal-strings -O3 -Werror -Wmissing-prototypes -Wnon-virtual-dtor -Wsign-compare -Wnewline-eof -DNDEBUG -DHAVE_DTRACE=1 -DWEBKIT_VERSION_MIN_REQUIRED=WEBKIT_VERSION_LATEST -DHAVE_HEADER_DETECTION_H -fasm-blocks -fstrict-aliasing -mmacosx-version-min=10.7 -gdwarf-2 -fvisibility=hidden -fvisibility-inlines-hidden -fno-threadsafe-statics -I/Volumes/Data/WebKit/WebKitBuild/JavaScriptCore.build/Release/JavaScriptCore.build/JavaScriptCore.hmap -I/Volumes/Data/WebKit/WebKitBuild/Release/include -I/Volumes/Data/WebKit/WebKitBuild/Release/DerivedSources/JavaScriptCore -I. -Iicu -I/Volumes/Data/WebKit/WebKitBuild/Release/usr/local/include -I/Volumes/Data/WebKit/WebKitBuild/JavaScriptCore.build/Release/JavaScriptCore.build/DerivedSources/x86_64 -I/Volumes/Data/WebKit/WebKitBuild/JavaScriptCore.build/Release/JavaScriptCore.build/DerivedSources -Wall -Wextra -Wcast-qual -Wchar-subscripts -Wextra-tokens -Wformat=2 -Winit-self -Wmissing-format-attribute -Wmissing-noreturn -Wpacked -Wpointer-arith -Wredundant-decls -Wundef -Wwrite-strings -F/Volumes/Data/WebKit/WebKitBuild/Release -include /Volumes/Data/WebKit/WebKitBuild/PrecompiledHeaders/JavaScriptCorePrefix-gvhpdgusmukbdobchmcjrzzcdyvs/JavaScriptCorePrefix.h -c /Volumes/Data/WebKit/Source/JavaScriptCore/runtime/JSActivation.cpp -o /Volumes/Data/WebKit/WebKitBuild/JavaScriptCore.build/Release/JavaScriptCore.build/Objects-normal/x86_64/JSActivation.o cc1plus: warnings being treated as errors /Volumes/Data/WebKit/Source/JavaScriptCore/runtime/JSActivation.cpp: In static member function 'static void JSC::JSActivation::visitChildren(JSC::JSCell*, JSC::SlotVisitor&)': /Volumes/Data/WebKit/Source/JavaScriptCore/runtime/JSActivation.cpp:74: warning: dereferencing type-punned pointer will break strict-aliasing rules Mark speculated blame goes to Geoff, so starting there.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-08-27 10:56:27 PDT
<
rdar://problem/12180632
>
Geoffrey Garen
Comment 2
2012-08-28 11:41:34 PDT
Committed
r126906
: <
http://trac.webkit.org/changeset/126906
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug