GCC warning in JSActivation is causing Mac EWS errors https://bugs.webkit.org/show_bug.cgi?id=95103

Reviewed by Sam Weinig.

Try to fix a strict aliasing violation by using bitwise_cast. The
union in the cast should signal to the compiler that aliasing between
types is happening.

* runtime/JSActivation.cpp:
(JSC::JSActivation::visitChildren):


Canonical link: https://commits.webkit.org/113083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126906 268f45cc-cd09-0410-ab3c-d52691b4dbfc